examples/type_system/failing/139_match_scrutinee_constraint_no_propagation_mixed_family.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 2 errors • examples/type_system/failing/139_match_scrutinee_constraint_no_propagation_mixed_family.flx
// error[E004]: Undefined Variable
//
// I can't find a value named `mystery_value`.
//
//   examples/type_system/failing/139_match_scrutinee_constraint_no_propagation_mixed_family.flx:47:13
//    |
// 47 |     let x = mystery_value
//    |             ^^^^^^^^^^^^^
//
// Hint:
//   Define it first: let mystery_value = ...;
//
//
// error[E056]: Wrong Number Of Arguments
//
// The `add` function takes 2 arguments, but 1 were provided.
//
//   examples/type_system/failing/139_match_scrutinee_constraint_no_propagation_mixed_family.flx:53:14
//    |
// 44 | fn add(a: Int, b: Int) -> Int { a + b }
//    | ----------------------------- `add` is defined with 2 parameters
// 45 |
// 46 | fn main() -> Unit {
// ... |
// 51 |         _ -> 0,
// 52 |     }
// 53 |     let _z = add(1)
//    |              ^^^^^^
//    |              ------ 1 arguments provided here, expected 2
//
// Help:
//   Add 1 missing argument(s), for example: `add(arg1, arg2)`.
//
// Found 2 errors.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E004
// expect-error: E056

fn add(a: Int, b: Int) -> Int { a + b }

fn main() -> Unit {
    let x = mystery_value
    let _y = match x {
        Some(n) -> n,
        Left(l) -> l,
        _ -> 0,
    }
    let _z = add(1)
}
